--- a/templates/covid/tips.html
+++ b/templates/covid/tips.html
@@ -3,26 +3,52 @@
 
 <html lang="en">
 <head>
-	<title>Corona Help Finder - Find help, tips to be safe, information and labs that do tests for Corona (covid-19) near you.</title>
-	<meta charset="utf-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160973103-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-160973103-1');
+</script>
+
+  <title>Corona Help Finder - Find help, tips to be safe, information and labs that do tests for Corona (covid-19) near you.</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
-	<nav>
-		<div class="container nav-wrapper">
-			<a href="/" class="brand-logo">Corona Help Finder</a>
-			<ul id="nav-mobile" class="right">
-				<li><a href="/">Home</a></li>
-                  <li><a href="/tips">Tips and Advice</a></li>
-                  <li><a href="/info">Trustful Informations</a></li>
-                  <li><a href="/fake">Fake News</a></li>
-			</ul>
-		</div>
-	</nav>
+
+
+
+  
+  <div class="nav">
+  <input type="checkbox" id="nav-check">
+  <div class="nav-header">
+    <div class="nav-title">
+      Corona Help Finder
+    </div>
+  </div>
+  <div class="nav-btn">
+    <label for="nav-check">
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
+  </div>
+  
+  <div class="nav-links">
+    <a href="/">Home</a>
+    <a href="/tips">Tips and Advice</a>
+    <a href="/info">Trustful Informations</a>
+    <a href="/fake">Fake News</a>
+  </div>
+</div>
 
 <iframe src="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
 </iframe>
