--- a/templates/covid/info.html
+++ b/templates/covid/info.html
@@ -46,7 +46,7 @@
     <a href="/">Home</a>
     <a href="/tips">Tips and Advice</a>
     <a href="/info">Trustful Informations</a>
-    <a href="/fake">Fake News</a>
+    <a href="/dashboard">Dashboard</a>
   </div>
 </div>
 <iframe src="https://special.ndtv.com/coronavirus-61/news#newslistingloadmore_0"  width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
@@ -66,7 +66,7 @@
                   <li><a href="/">Home</a></li>
                   <li><a href="/tips">Tips and Advice</a></li>
                   <li><a href="/info">Trustful Informations</a></li>
-                  <li><a href="/fake">Fake News</a></li>
+                  <li><a href="/dashboard">Dashboard</a></li>
                 </ul>
               </div>
             </div>
