--- a/templates/covid/dashboard.html
+++ b/templates/covid/dashboard.html
@@ -80,7 +80,7 @@
   <h4 style="text-align: center;">This Map shows Covid 19 Cases all around the World</h4>
   <p style="text-align: center;"><strong>Hover/Click on any region to know details.</strong></p>
   <iframe id="coronaworld" allowtransparency="true" src="https://edata.ndtv.com/coronavirus/index.html?device=hp" scrolling="no" width="100%" height="323px" frameborder="0"></iframe>
-  {% endif %}
+  {% else %}
   <!-- The Mobie View Ends -->
 
 
@@ -122,7 +122,7 @@
   <h4 style="text-align: center;">This Map shows Covid 19 Cases all around the World</h4>
 <p style="text-align: center;"><strong>Hover/Click on any region to know details.</strong></p>
   <iframe id="coronaworld" allowtransparency="true" src="https://edata.ndtv.com/coronavirus/index.html?device=hp" scrolling="no" width="150%" height="323px" frameborder="0"></iframe>
-
+{% endif %}
 
 <p style="font-size: 8px;">Data Souce: NDTV and WHO</p>
 
