Adding decentralized and public, digital donation system Part 1: Added models, Views for org profile and work, Made org work public so everyone can see.

--- a/covid/templates/covid/home.html
+++ b/covid/templates/covid/home.html
@@ -51,6 +51,8 @@
     <a href="/tips">Tips and Advice</a>
     <a href="/info">Trustful Informations</a>
     <a href="/dashboard">Dashboard</a>
+    <a href="/covid/profile/edit/{{ user.myprofile.id }}">Edit Profile</a>
+    <a href="/covid/mypost/">My Post</a>
   </div>
 </div>
 
