--- a/covid/templates/covid/chose_state.html
+++ b/covid/templates/covid/chose_state.html
@@ -1,6 +1,79 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="container">
+    <h5 style="text-align: center">The site is made to help people in various states of India to find help, Labs and hospitals that test for Corona or covid19 virus, tips to be safe, trustful information and to check the fake news that's circulation about the virus.</h5>
+    <br>
+    <div class="row">
+        <div class="col s4">
+            <!-- Promo Content 1 goes here -->
+            <div class="center">
+                <i class="large material-icons" style="color: #EE6E73">flash_on</i>
+                <p>Find help near you</p>
+                <p class="light center">Find Hospitals & clinics near you that do tests for Corona virus.</p>
+            </div>
+        </div>
+
+        <div class="col s4">
+            <!-- Promo Content 2 goes here -->
+            <div class="center">
+                <i class="large material-icons" style="color: orange">camera</i>
+                <p>Tips & Advices</p>
+                <p class="light center">Tips & advices to be safe from the virus.</p>
+            </div>
+        </div>
+
+        <div class="col s4">
+            <!-- Promo Content 3 goes here -->
+            <div class="center">
+                <i class="large material-icons" style="color: blue">chrome_reader_mode</i>
+                <p>Trustful information</p>
+                <p class="light center">Find informations from reliable sources.</p>
+            </div>
+        </div>
+    </div>
+    
+    <form action="{% url 'chose_state' %}" method="post">
+        {% csrf_token %}
+<label>Select state to see hospitals, clinics and labs that do tests for Corona Virus.</label>
+  <select class="browser-default" name="state">
+    <option value="" disabled selected>Choose your state</option>
+    <option value="Andhra Pradesh">Andhra Pradesh</option>
+  <option value="Andaman & Nicobar Islands">Andaman & Nicobar Islands</option>
+  <option value="Assam">Assam</option>
+  <option value="Bihar">Bihar</option>
+  <option value="Chandigarh">Chandigarh</option>
+  <option value="Delhi-NCR">Delhi-NCR</option>
+  <option value="Gujarat">Gujarat</option>
+  <option value="Haryana">Haryana</option>
+  <option value="Himachal Pradesh">Himachal Pradesh</option>
+  <option value="Jammu and Kashmir">Jammu and Kashmir</option>
+  <option value="Jharkhand">Jharkhand</option>
+
+  <option value="Karnataka">Karnataka</option>
+  <option value="Kerala">Kerala</option>
+  <option value="Madhya Pradesh">Madhya Pradesh</option>
+  <option value="Meghalaya">Meghalaya</option>
+  <option value="Maharashtra">Maharashtra</option>
+  <option value="Manipur">Manipur</option>
+  <option value="Odisha">Odisha</option>
+  <option value="Puducherry">Puducherry</option>
+  <option value="Punjab">Punjab</option>
+  <option value="Rajasthan">Rajasthan</option>
+  <option value="Tamil Nadu">Tamil Nadu</option>
+  <option value="Tripura">Tripura</option>
+
+  <option value="Telangana">Telangana</option>
+  <option value="Uttar Pradesh">Uttar Pradesh</option>
+  <option value="UttaraKhand">UttaraKhand</option>
+  <option value="West Bengal">West Bengal</option>
+
+  </select>
+        <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+            <i class="material-icons right">send</i>
+        </button>
+    </form> 
+</div>
     <h2 style="text-align: center;">{{ state | title }}</h2>
 
 {% if state == 'Andhra Pradesh' %}
