--- a/covid/templates/base.html
+++ b/covid/templates/base.html
@@ -1,101 +1,145 @@
 {% load staticfiles %}
 {% load static %}
-
-<html lang="en">
-<head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160973103-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-160973103-1');
-</script>
-
-	<title>Corona Help Finder - Find help, tips to be safe, information and labs that do tests for Corona (covid-19) near you.</title>
-	<meta charset="utf-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script
-        src="https://code.jquery.com/jquery-3.4.1.js"
-        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-        crossorigin="anonymous"></script>
-</head>
-
-<body>
-
-
-
-  
-  <div class="nav">
-  <input type="checkbox" id="nav-check">
-  <div class="nav-header">
-    <div class="nav-title">
-      Corona Help Finder
-    </div>
-  </div>
-  <div class="nav-btn">
-    <label for="nav-check">
-      <span></span>
-      <span></span>
-      <span></span>
-    </label>
-  </div>
-  
-  <div class="nav-links">
-    <a href="/">Home</a>
-    <a href="/tips">Tips and Advice</a>
-    <a href="/info">Trustful Informations</a>
-    <a href="/dashboard">Dashboard</a>
-    <a href="/covid/profile/edit/{{ user.myprofile.id }}">Edit Profile</a>
-    <a href="/covid/mypost/">My Post</a>
-    {% if user.is_authenticated %}
-    <a href="/accounts/logout">Logout</a>
-    {% else %}
-    <a href="/accounts/login">Login</a>
-    {% endif %}
-  </div>
-</div>
+<html>
+  <head>
+    <title>Corona Help Finder - Find help, tips to be safe, information and labs that do tests for Corona (covid-19) near you.</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="author" content="colorlib.com">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
+    <link href="/static/css/main.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/static/css/style.css">
+  </head>
+  <body>
+    <header class="header">
+    <nav class="navbar navbar-expand-lg fixed-top py-3">
+      <div class="container"><a href="#" class="navbar-brand text-uppercase font-weight-bold">Transparent Nav</a>
+        <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></i></button>
+        <div id="navbarSupportedContent" class="collapse navbar-collapse">
+          <ul class="navbar-nav ml-auto">
+                      <li class="nav-item active"><a href="/" class="nav-link text-uppercase font-weight-bold">Home <span class="sr-only">(current)</span></a></li>
+                      <li class="nav-item"><a href="/covid/tips" class="nav-link text-uppercase font-weight-bold">Advice</a></li>
+                      <li class="nav-item"><a href="/covid/info" class="nav-link text-uppercase font-weight-bold">Trustful Informations</a></li>
+                      <li class="nav-item"><a href="/covid/dashboard" class="nav-link text-uppercase font-weight-bold">Dashboard</a></li>
+                      {% if user.is_authenticated %}
+                      <li class="nav-item"><a href="/covid/myprofile/{{ user.myprofile.id }}" class="nav-link text-uppercase font-weight-bold">My Profile</a></li>
+                      <li class="nav-item"><a href="/covid/mypost/" class="nav-link text-uppercase font-weight-bold">My Work</a></li>
+                      <li class="nav-item"><a href="/account/logout/" class="nav-link text-uppercase font-weight-bold">Logout</a></li>
+                      {% else %}
+                      <li class="nav-item"><a href="/covid/myprofile" class="nav-link text-uppercase font-weight-bold">Donate</a></li>
+                      {% endif %}
+                  </ul>
+              </div>
+          </div>
+      </nav>
+  </header>
 
 
 {% block content %}
-{% endblock content %}
+{% endblock %}
+<!--Footer-->
+  <footer class="page-footer text-center text-md-left pt-4" style="background-color: #f2f2f2;">
 
-<footer class="page-footer">
-          <div class="container">
-            <div class="row">
-              <div class="col l6 s12">
-                <h5 class="white-text">About Corona Help Finder</h5>
-                <p class="grey-text text-lighten-4">The site is made to help people in various states of India to find help, Labs and hospitals that test for Corona or covid19 virus, tips to be safe, trustful information and to check the fake news that's circulation about the virus.</p>
-              </div>
-              <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
-                <ul>
-                  <li><a href="/">Home</a></li>
-                  <li><a href="/tips">Tips and Advice</a></li>
-                  <li><a href="/info">Trustful Informations</a></li>
-                  <li><a href="/dashboard">Dashboard</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="footer-copyright">
-            <div class="container">
-            Created by Ahmed Reza with ❤️
-            </div>
-          </div>
-        </footer>
+    <!--Footer Links-->
+    <div class="container-fluid">
+      <div class="row">
+
+        <!--First column-->
+        <div class="col-md-3">
+          <h5 class="text-uppercase font-weight-bold mb-4">Corona Help Finder</h5>
+          <p>The site is made to help people in various states of India to find help, Labs and hospitals that test for Corona or covid19 virus, tips to be safe, trustful information and to check the fake news that's in circulation about the virus.</p>
+        </div>
+        <!--/.First column-->
+
+        <hr class="w-100 clearfix d-md-none">
+
+        <!--Second column-->
+        <div class="col-md-2 mx-auto">
+          <h5 class="text-uppercase font-weight-bold mb-4">Links</h5>
+          <ul class="list-unstyled">
+            <li><a href="/">Home</a></li>
+            <li><a href="/covid/tips">Tips & Advice</a></li>
+            <li><a href="/covid/info">Trustful Informations</a></li>
+            <li><a href="/covid/myprofile">Donate to Orgs</a></li>
+          </ul>
+        </div>
+        <!--/.Second column-->
+
+        <hr class="w-100 clearfix d-md-none">
+
+        <!--Third column-->
+        <div class="col-md-2 mx-auto">
+          <h5 class="text-uppercase font-weight-bold mb-4">Links</h5>
+          <ul class="list-unstyled">
+            <li><a href="#!">Link 1</a></li>
+            <li><a href="#!">Link 2</a></li>
+            <li><a href="#!">Link 3</a></li>
+            <li><a href="#!">Link 4</a></li>
+          </ul>
+        </div>
+        <!--/.Third column-->
+
+        <hr class="w-100 clearfix d-md-none">
 
 
-<script>
-    	$(document).ready(function() {
-    $('select').material_select();
-});
-    </script>
 
-</body>
+      </div>
+    </div>
+    <!--/.Footer Links-->
+
+    <hr>
+
+    <!--Call to action-->
+    <div class="call-to-action text-center my-4">
+      <ul class="list-unstyled list-inline">
+        {% if user.is_authenticated %}
+        <li class="list-inline-item">
+          <h5>Logout for now.</h5>
+        </li>
+        <li class="list-inline-item"><a href="/account/logout" class="btn btn-primary">Logout!</a></li>
+        {% else %}
+        <li class="list-inline-item">
+          <h5>Login as orginisation.</h5>
+        </li>
+        <li class="list-inline-item"><a href="/account/login" class="btn btn-primary">Log in!</a></li>
+        {% endif %}
+      </ul>
+    </div>
+    <!--/.Call to action-->
+
+    <hr>
+
+    <!--Social buttons-->
+    <div class="social-section text-center">
+      <ul class="list-unstyled list-inline">
+        <li class="list-inline-item"><a class="btn-floating btn-fb"><i class="fab fa-facebook-f"> </i></a></li>
+        <li class="list-inline-item"><a class="btn-floating btn-tw"><i class="fab fa-twitter"> </i></a></li>
+        <li class="list-inline-item"><a class="btn-floating btn-gplus"><i class="fab fa-google-plus-g"> </i></a></li>
+        <li class="list-inline-item"><a class="btn-floating btn-li"><i class="fab fa-linkedin-in"> </i></a></li>
+        <li class="list-inline-item"><a class="btn-floating btn-git"><i class="fab fa-github"> </i></a></li>
+      </ul>
+    </div>
+    <!--/.Social buttons-->
+
+    <!--Copyright-->
+    <div class="footer-copyright py-3 text-center">
+      <div class="container-fluid">
+        © 2020 Copyright: <a href="https://about.me/ahmed_reza"> Ahmed Reza </a>
+
+      </div>
+    </div>
+    <!--/.Copyright-->
+
+  </footer>
+  <!--/.Footer-->
+<script src="/static/js/choices.js"></script>
+<script src="/static/js/main.js"></script>
+  </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 </html>
+
+
