Styled all the pages related to models except the post detail page added edit path for posts, added masnory.js to show organizations.

--- a/covid/templates/covid/mypost_list.html
+++ b/covid/templates/covid/mypost_list.html
@@ -1,32 +1,66 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="p-5">
-<h1 class="myhead2">My Posts </h1>
-<hr>
-<form class="form-inline">
-<input class="form-control mr-3" placeholder="Search" value="{{ request.GET.si }}" type="text" name="si" />
-<input class="btn btn-dark mr-3" type="submit" value="Search" />
-<a class="btn btn-dark" href="/covid/mypost/create"><span class="fa fa-plus"></span></a>
-</form>
 
-<table class="table my-3">
-    <thead class="thead-dark">
-        <tr>
-            <th>Title</th>
-            <th>Date</th>
-            <th>Action</th>
-        </tr>
-    </thead>
-{% for n1 in mypost_list %}
-        <tr>
-            <td>{{n1.title}}</td>
-            <td>{{n1.cr_date | date:"d/m/y"}}</td>
-            <td>
-            <a class="btn btn-dark btn-sm" href='/covid/mypost/{{n1.id}}'>Read More</a>
-            <a class="btn btn-dark btn-sm" href='/covid/mypost/delete/{{n1.id}}'>Delete</a>
-            </td>
-        </tr>
-{% endfor %}
-</table>
+
+<div class="container py-5">
+  <!-- For Demo Purpose -->
+<section class="py-5 header text-center">
+    <div class="container py-4">
+        <header>
+            <h1 class="display-4">All Your work are here.</h1>
+            <p class="font-italic text-muted mb-1">All your work are shown here, keep adding posts about your work so that donars can view the awesome work you are doing with the fund raised.</p>
+            <p class="font-italic text-muted">More work you published more funds you raise to do more awesome work.
+            </p>
+        </header>
+    </div>
+</section>
+
+    <div class="s200">
+      <form>
+        <div class="inner-form">
+          <div class="input-field first-wrap">
+            <div class="svg-wrapper">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+              </svg>
+            </div>
+            <input id="search" placeholder="Search your work to find easily." value="{{ request.GET.si }}" type="text" name="si" />
+          </div>
+          <div class="input-field second-wrap">
+            <button class="btn-search" type="submit" value="Search">SEARCH</button>
+          </div>
+        </div>
+        <span class="info">Search your work with title or description.</span>
+      </form>
+    </div>
+
+
+  <!-- DEMO 4 -->
+  <div class="py-5">
+    <h3 class="font-weight-bold mb-0">Edit | Delete</h3>
+    <p class="font-italic text-muted mb-4">You can edit or delete your published work, keep in mind deleting published work could have a negative affect on your campaign.</p>
+    <div class="row">
+
+
+      <!-- DEMO 4 Item-->
+      {% for n1 in mypost_list %}
+      <div class="col-lg-6 mb-3 mb-lg-0">
+        <div class="hover hover-4 text-white rounded"><img src="/media/{{n1.main_pic}}" alt="">
+          <div class="hover-overlay"></div>
+          <div class="hover-4-content">
+            <h3 class="hover-4-title text-uppercase font-weight-bold mb-0"><span class="font-weight-light">{{n1.title}} </span></h3>
+            <p class="hover-4-title text-uppercase font-weight-bold mb-0"><span class="font-weight-light">Published on: </span>{{n1.cr_date | date:"d/m/y"}}</p>
+            <p class="hover-4-description text-uppercase mb-0 small">{{n1.short_description}}</p>
+          </div>
+        </div>
+        <a class="btn btn-dark btn-sm mt-2" href='/covid/mypost/{{n1.id}}'>Read More</a>
+        <a class="btn btn-dark btn-sm mt-2" href='/covid/mypost/delete/{{n1.id}}'>Delete</a>
+        <a class="btn btn-dark btn-sm mt-2" href="/covid/mypost/edit/{{n1.id}}">Edit Work</a>
+      </div>
+      {% endfor %}
+
+    </div>
+  </div>
+
 </div>
 {% endblock %}
