--- a/covid/static/css/main.css
+++ b/covid/static/css/main.css
@@ -822,6 +822,167 @@ button {
   flex-wrap: wrap;
 }
 
+
+.s200 {
+  display: flex;
+  flex-wrap: wrap;
+  -ms-flex-pack: center;
+      justify-content: center;
+  font-family: 'Poppins', sans-serif;
+
+}
+
+.s200 form {
+  width: 100%;
+  max-width: 790px;
+
+}
+
+.s200 form .inner-form {
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  -ms-flex-align: center;
+      align-items: center;
+  box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
+  border-radius: 34px;
+  overflow: hidden;
+  margin-bottom: 30px;
+}
+
+.s200 form .inner-form .input-field {
+  height: 68px;
+}
+
+.s200 form .inner-form .input-field input {
+  height: 100%;
+  background: transparent;
+  border: 0;
+  display: block;
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #000;
+}
+
+.s200 form .inner-form .input-field input.placeholder {
+  color: #222;
+  font-size: 16px;
+}
+
+.s200 form .inner-form .input-field input:-moz-placeholder {
+  color: #222;
+  font-size: 16px;
+}
+
+.s200 form .inner-form .input-field input::-webkit-input-placeholder {
+  color: #222;
+  font-size: 16px;
+}
+
+.s200 form .inner-form .input-field input:hover, .s200 form .inner-form .input-field input:focus {
+  box-shadow: none;
+  outline: 0;
+}
+
+.s200 form .inner-form .input-field.first-wrap {
+  -ms-flex-positive: 1;
+      flex-grow: 1;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  background: #d9f1e3;
+}
+
+.s200 form .inner-form .input-field.first-wrap input {
+  -ms-flex-positive: 1;
+      flex-grow: 1;
+}
+
+.s200 form .inner-form .input-field.first-wrap .svg-wrapper {
+  min-width: 80px;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+}
+
+.s200 form .inner-form .input-field.first-wrap svg {
+  width: 36px;
+  height: 36px;
+  fill: #222;
+}
+
+.s200 form .inner-form .input-field.second-wrap {
+  min-width: 216px;
+}
+
+.s200 form .inner-form .input-field.second-wrap .btn-search {
+  height: 100%;
+  width: 100%;
+  white-space: nowrap;
+  font-size: 16px;
+  color: #fff;
+  border: 0;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  background: #00ad5f;
+  transition: all .2s ease-out, color .2s ease-out;
+  font-weight: 300;
+}
+
+.s200 form .inner-form .input-field.second-wrap .btn-search:hover {
+  background: #009451;
+}
+
+.s200 form .inner-form .input-field.second-wrap .btn-search:focus {
+  outline: 0;
+  box-shadow: none;
+}
+
+.s200 form .info {
+  font-size: 15px;
+  color: gray;
+  padding-left: 26px;
+  text-shadow: 0px 10px 50px rgba(37, 50, 233, 1);
+}
+
+@media screen and (max-width: 992px) {
+  .s200 form .inner-form .input-field {
+    height: 50px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .s200 form .inner-form .input-field.first-wrap .svg-wrapper {
+    min-width: 40px;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -ms-flex-align: center;
+        align-items: center;
+    padding: 0 10px;
+  }
+  .s200 form .inner-form .input-field.first-wrap svg {
+    width: 26px;
+    height: 26px;
+    fill: #222;
+  }
+  .s200 form .inner-form .input-field.second-wrap {
+    min-width: 100px;
+  }
+  .s200 form .inner-form .input-field.second-wrap .btn-search {
+    font-size: 13px;
+  }
+}
+
 .s130 {
   min-height: 100vh;
   display: flex;
@@ -839,7 +1000,6 @@ button {
 .s130 form {
   width: 100%;
   max-width: 790px;
-  padding-top: 24vh;
 }
 
 .s130 form .inner-form {
@@ -988,3 +1148,7 @@ button {
 }
 
 /*# sourceMappingURL=Searchs_130.css.map */
+
+
+
+
