--- a/covid/templates/base.html
+++ b/covid/templates/base.html
@@ -11,7 +11,9 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="/static/css/main.css" rel="stylesheet" />
     <link rel="stylesheet" href="/static/css/style.css">
   </head>
@@ -29,7 +31,7 @@
                       {% if user.is_authenticated %}
                       <li class="nav-item"><a href="/covid/myprofile/{{ user.myprofile.id }}" class="nav-link text-uppercase font-weight-bold">My Profile</a></li>
                       <li class="nav-item"><a href="/covid/mypost/" class="nav-link text-uppercase font-weight-bold">My Work</a></li>
-                      <li class="nav-item"><a href="/account/logout/" class="nav-link text-uppercase font-weight-bold">Logout</a></li>
+                      <li class="nav-item"><a href="/accounts/logout/" class="nav-link text-uppercase font-weight-bold">Logout</a></li>
                       {% else %}
                       <li class="nav-item"><a href="/covid/myprofile" class="nav-link text-uppercase font-weight-bold">Donate</a></li>
                       {% endif %}
@@ -101,12 +103,12 @@
         <li class="list-inline-item">
           <h5>Logout for now.</h5>
         </li>
-        <li class="list-inline-item"><a href="/account/logout" class="btn btn-primary">Logout!</a></li>
+        <li class="list-inline-item"><a href="/accounts/logout" class="btn btn-primary">Logout!</a></li>
         {% else %}
         <li class="list-inline-item">
           <h5>Login as orginisation.</h5>
         </li>
-        <li class="list-inline-item"><a href="/account/login" class="btn btn-primary">Log in!</a></li>
+        <li class="list-inline-item"><a href="/accounts/login" class="btn btn-primary">Log in!</a></li>
         {% endif %}
       </ul>
     </div>
@@ -139,6 +141,8 @@
   <!--/.Footer-->
 <script src="/static/js/choices.js"></script>
 <script src="/static/js/main.js"></script>
+<script src="https://unpkg.com/imagesloaded@4.1.4/imagesloaded.pkgd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js" integrity="sha256-Nn1q/fx0H7SNLZMQ5Hw5JLaTRZp0yILA/FRexe19VdI=" crossorigin="anonymous"></script>
   </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 </html>
 
