--- a/covid/templates/base.html
+++ b/covid/templates/base.html
@@ -20,7 +20,7 @@
   <body>
     <header class="header">
     <nav class="navbar navbar-expand-lg fixed-top py-3">
-      <div class="container"><a href="#" class="navbar-brand text-uppercase font-weight-bold">Transparent Nav</a>
+      <div class="container"><a href="#" class="navbar-brand text-uppercase font-weight-bold">Covid Help Finder</a>
         <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></i></button>
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
@@ -106,7 +106,7 @@
         <li class="list-inline-item"><a href="/accounts/logout" class="btn btn-primary">Logout!</a></li>
         {% else %}
         <li class="list-inline-item">
-          <h5>Login as orginisation.</h5>
+          <h5>Login as organization.</h5>
         </li>
         <li class="list-inline-item"><a href="/accounts/login" class="btn btn-primary">Log in!</a></li>
         {% endif %}
@@ -143,7 +143,9 @@
 <script src="/static/js/main.js"></script>
 <script src="https://unpkg.com/imagesloaded@4.1.4/imagesloaded.pkgd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js" integrity="sha256-Nn1q/fx0H7SNLZMQ5Hw5JLaTRZp0yILA/FRexe19VdI=" crossorigin="anonymous"></script>
-  </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+
+  </body>
+
 </html>
 
 
