Added fakecheck to check if whatsapp forward is fake

--- a/covid/templates/base.html
+++ b/covid/templates/base.html
@@ -25,6 +25,7 @@
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
                       <li class="nav-item active"><a href="/" class="nav-link text-uppercase font-weight-bold">Home <span class="sr-only">(current)</span></a></li>
+                      <li class="nav-item"><a href="/covid/fakecheck/" class="nav-link text-uppercase font-weight-bold">FakeCheck</a></li>
                       <li class="nav-item"><a href="/covid/tips" class="nav-link text-uppercase font-weight-bold">Advice</a></li>
                       <li class="nav-item"><a href="/covid/info" class="nav-link text-uppercase font-weight-bold">Trustful Informations</a></li>
                       <li class="nav-item"><a href="/covid/dashboard" class="nav-link text-uppercase font-weight-bold">Dashboard</a></li>
