--- a/covid/static/css/style.css
+++ b/covid/static/css/style.css
@@ -14,6 +14,9 @@
 .navbar .nav-link {
     color: #000;
 }
+.nav-link{
+    font-size: 14px;
+}
 
 .navbar .nav-link:hover,
 .navbar .nav-link:focus {
@@ -41,7 +44,9 @@
     color: #555;
     text-decoration: none;
 }
-
+.navbar-brand{
+    font-size: 15px;
+}
 .navbar.active .navbar-brand {
     color: #555;
 }
